--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^4.1.1",
     "@react-navigation/drawer": "^7.7.13",
     "@react-navigation/elements": "^2.8.2",
     "@react-navigation/native": "^7.1.20",
